Getting back on track

--- a/app/views/promotions/show.html.erb
+++ b/app/views/promotions/show.html.erb
@@ -20,6 +20,12 @@
   <% end %> 
 </dl>
 
+
+<% if @promotion.photo.attached? %>
+<h2>Foto</h2>
+  <%= image_tag @promotion.photo %>
+<% end %>
+
 <h2>Categorias de Produtos</h2>
 
 <% @promotion.product_categories.each do |pc| %>
