--- a/app/views/promotions/new.html.erb
+++ b/app/views/promotions/new.html.erb
@@ -16,6 +16,10 @@
     <%= f.text_field :name %>
   </div>
   <div>
+    <%= f.label :photo %>
+    <%= f.file_field :photo %>
+  </div>
+  <div>
     <%= f.label :description %>
     <%= f.text_field :description %>
   </div>
