--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <% if user_signed_in? %>
         <%= current_user.email %>
         <%= link_to 'Sair', destroy_user_session_path, method: :delete  %>
+        <%= link_to 'Cupons', coupons_path %>
       <% else %>
         <%= link_to 'Entrar', new_user_session_path %>
       <% end %>
@@ -23,5 +24,7 @@
     <p class="alert"><%= alert %></p>
 
     <%= yield %>
+
+    <%= yield :javascript %>
   </body>
 </html>
